   when an activity fails to start, and to keep track of such activities.
   Please see the corresponding example for more info.

SMPI:
 - Dynamic costs for MPI operations: New API to allow users to dynamically
   change injected costs for MPI_Recv, MPI_Send and MPI_Isend operations.
   Alternative for smpi/or, smpi/os and smpi/ois configuration options.

Documentation:
 - New section: "SimGrid MPI calibration of a Grid5000 cluster"
   presenting how to properly calibrate MPI communications in SimGrid.
 - Complete and reword the platform section, which is now completed.

Python:
 - Thread contexts are used by default with Python bindings.  Other kinds of
   contexts revealed unstable, specially starting with pybind11 v2.8.0.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#95: Wrong computation time for multicore execution after pstate change
 - FG#97: Wrong computation time for ptask+multicore+pstates
 - FG#99: Weird segfault when not sealing an host

----------------------------------------------------------------------------

SimGrid (3.29) October 7. 2021

The "Ask a stupid question" release.

We wish that every user ask one question about SimGrid to celebrate.
On Mattermost, Stack Overflow or using the issues tracker.


New modeling features:
 - Non-linear resource sharing, modeling resources whose performance heavily degrades with contention:
   - The total capacity may be updated dynamically through a callback
     and depends mainly on the number of concurrent flows.
   - Examples (both cpp and python): io-degradation, network-nonlinear, exec-cpu-nonlinear

 - Dynamic factors: model variability in the speed of activities
    - Each action can now have a factor that affects its progression.
      This multiplicative factor is applied when updating the amount of work
      remaining, thereby an activity with factor=0.5 only uses half of the